# video_procesing

./: .gitignore  README.md  VIDEO_EDITING_CAPABILITIES.md  cli.py  pyproject.toml  requirements.txt
configs/: default.yaml  instagram_reels.yaml  instagram_split_screen_prispevek8.yaml  my_instagram_edit copy.yaml  my_instagram_edit.yaml
effects_sound/: README.md
examples/: instagram_neon_pipeline.py  merge_with_transitions.py  neon_subtitles.py  simple_pipeline.py  spoken_word_highlight.py
fonts/: README.md
vc_app_spec/: 01-overview.md  02-requirements.md  03-architecture.md  04-data-models.md  05-pipeline-spec.md  06-nodes-catalog.md  07-cli-and-config.md  08-subtitles-and-effects.md  09-setup-and-run.md  README.md
videopipe/: __init__.py
videopipe/core/: __init__.py  config.py  context.py  node.py  pipeline.py
videopipe/effects/: __init__.py  neon.py  speed.py  text_effects.py
videopipe/nodes/: __init__.py  effect_nodes.py  subtitle_nodes.py  video_nodes.py
videopipe/plugins/: __init__.py  base.py  registry.py
videopipe/subtitles/: __init__.py  renderer.py  whisper_stt.py
videopipe/transitions/: __init__.py  base.py  slide.py
videopipe/utils/: __init__.py  ffmpeg.py  fonts.py
videopipe/video/: __init__.py  clip.py  export.py  merge.py
